fittings/crates/macros/tests/ui/fail/on_enum.rs
#[fittings::service]
enum NotATrait {
    A,
}

fn main() {}
