fittings/crates/macros/tests/ui/fail/on_enum.stderr
error: `#[fittings::service]` can only be applied to traits
 --> tests/ui/fail/on_enum.rs:2:1
  |
2 | enum NotATrait {
  | ^^^^
